--- a/Ionic4/src/app/inspection-list/inspection-list.page.html
+++ b/Ionic4/src/app/inspection-list/inspection-list.page.html
@@ -1,7 +1,7 @@
 <ion-header class="page-header">
   <ion-menu-toggle menu="inspection-list-menu"></ion-menu-toggle>
   <ion-toolbar class="page-header" color="primary">
-    <ion-menu-button menu="inspection-list-menu" slot="start"></ion-menu-button>
+    <ion-menu-button menu="inspection-list-menu" slot="start" class="menu-icon-white"></ion-menu-button>
     <ion-title>{{'inspectionList' | translate}}</ion-title>
   </ion-toolbar>
   <ion-toolbar color="tertiary">
