--- a/Ionic4/src/app/inspection-list/inspection-list.page.html
+++ b/Ionic4/src/app/inspection-list/inspection-list.page.html
@@ -5,7 +5,7 @@
     <ion-title>{{'inspectionList' | translate}}</ion-title>
   </ion-toolbar>
   <ion-toolbar color="tertiary">
-    <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="filterList($event)" color="light"
+    <ion-searchbar [(ngModel)]="searchTerm" (ionChange)="filterList()" color="light" debounce="500"
       placeholder="{{'inspectionListSearchText' | translate}}">
     </ion-searchbar>
   </ion-toolbar>
@@ -42,26 +42,32 @@
     <ion-item-group *ngFor="let batch of filteredBatches">
       <ion-item-divider>
         {{'inspectionBatch' | translate}} : {{batch.description}}
-        <ion-button slot="end" fill="clear" color="dark" (click)="downloadBatch(batch)">
+        <ion-button slot="end" fill="clear" color="dark" (click)="downloadBatch(batch, $event)">
           <ion-icon slot="icon-only" [name]="batch.hasBeenFullyDownloaded ? 'cloud' : 'cloud-download'"></ion-icon>
         </ion-button>
       </ion-item-divider>
 
-      <ion-item *ngFor="let inspection of batch.inspections" routerLink='/inspection'
-        [routerLink]="['/inspection', inspection.id]"
+      <ion-item button *ngFor="let inspection of batch.inspections"
+        (click)="goToPage(inspection.id)"
         [style.background-color]="inspection.status == -1 ? 'lightgrey' : ''">
+
         <ion-avatar slot="start" style="font-size: 40px">
           <ion-icon name="home" [style.color]="getRiskColor(inspection.idRiskLevel)"></ion-icon>
         </ion-avatar>
+
         <ion-label>
           <h2>{{inspection.civicNumber}}{{inspection.civicLetter}}, {{inspection.laneName}}</h2>
           <p>{{'riskLevel' | translate}} : {{getRiskDescription(inspection.idRiskLevel)}}</p>
           <p ion-text>{{getStatusDescription(inspection.status)}}</p>
         </ion-label>
-        <ion-icon [name]="inspection.status == -1 ? 'cloud-done' : 'cloud'" color="dark" slot="end"
-          *ngIf="inspection.hasBeenDownloaded"></ion-icon>
-        <ion-icon name="cloud-download" *ngIf="!inspection.hasBeenDownloaded" color="dark" slot="end"
-          (click)="downloadInspection(inspection, batch)"></ion-icon>
+
+        <ion-button stopEvent slot="end" fill="clear" color="dark" *ngIf="inspection.hasBeenDownloaded" (click)="$event.stopPropagation()">
+          <ion-icon [name]="inspection.status == -1 ? 'cloud-done' : 'cloud'" size="big" slot="icon-only"></ion-icon>
+        </ion-button>
+
+        <ion-button stopEvent slot="end" fill="clear" color="dark" (click)="downloadInspection(inspection, batch, $event)" *ngIf="!inspection.hasBeenDownloaded">
+          <ion-icon name="cloud-download" size="big" slot="icon-only"></ion-icon>
+        </ion-button>
 
       </ion-item>
 
