--- a/Ionic4/src/app/inspection/components/survey-parent-child-question/survey-parent-child-question.component.html
+++ b/Ionic4/src/app/inspection/components/survey-parent-child-question/survey-parent-child-question.component.html
@@ -4,7 +4,7 @@
       </ion-icon>
     </h4>
     <div>
-      <ion-icon name="trash" (click)="deleteQuestionGroup(question)"></ion-icon>
+      <ion-icon name="trash" (click)="deleteQuestionGroup()"></ion-icon>
     </div>
   </div>
   <div #questionGroup>
