--- a/Ionic4/src/app/inspection-building/inspection-building-home/inspection-building-home.component.scss
+++ b/Ionic4/src/app/inspection-building/inspection-building-home/inspection-building-home.component.scss
@@ -1,3 +1,26 @@
 .active-item {
-    --background: var(--ion-color-secondary-tint);
+  --background: var(--ion-color-secondary-tint);
+}
+
+.menu-items {
+  height: 100%;
+  margin: 0px;
+}
+
+.menu-icon {
+  color: black;
+}
+
+.menu-items {
+  .item {
+    &:last-child {
+      --border-style: hidden;
+    }
+    .item-inner {
+      border-color: rgba(86, 61, 124, 0.1);
+      &:last-child {
+        --border-style: hidden;
+      }
+    }
+  }
 }
