feat(#295) Add mobile sketch tool's components.

--- a/Ionic4/src/app/inspection/inspection-implantation-plan/inspection-implantation-plan.component.html
+++ b/Ionic4/src/app/inspection/inspection-implantation-plan/inspection-implantation-plan.component.html
@@ -8,7 +8,9 @@
   
   <ion-content>
 
-      <app-pictures [repo]="picRepo" [multiPictures]="false" height="80vh" [saveAuto]="false" [(ngModel)]="IdBuilding">{{'loading' | translate}}</app-pictures>
+      <app-pictures [repo]="picRepo" [multiPictures]="false" height="100%" style="background-color: lawngreen;" [saveAuto]="false" [(ngModel)]="IdBuilding">
+        {{'loading' | translate}}
+      </app-pictures>
 
   </ion-content>
   
