--- a/Ionic4/src/app/shared/components/pictures/pictures.component.html
+++ b/Ionic4/src/app/shared/components/pictures/pictures.component.html
@@ -1,36 +1,37 @@
 <ion-spinner [style.display]="isLoading ? 'block' : 'none'" item-start></ion-spinner>
 
-<ion-list class="list-items ion-no-padding">
-    <ion-item-divider>
-        Photo(s)
-        <ion-button slot="end" (click)="selectPicture()" color="primary">
-            <ion-icon class="footer-button-camera" name="albums" slot="start"></ion-icon>
-            {{'choose' | translate}}
-        </ion-button>
-        <ion-button slot="end" (click)="takeNewPicture()" *ngIf="isUsingCordova" color="primary">
-            <ion-icon class="footer-button-camera" name="camera" slot="start"></ion-icon>
-            {{'new' | translate}}
-        </ion-button>
-    </ion-item-divider>
-    <ion-item *ngIf="repo.pictures != null">
-        <ion-slides pager="{{repo.pictures.length > 1 && multiPictures ? true : false}}">
-            <ion-slide *ngFor="let picture of repo.pictures;">
-                <ion-card>
-                    <ion-button size="small" fill="outline" class="deleteIcon" (click)="onDeletePhotos(picture.id)"
-                            color="caucaRed">
-                        <ion-icon name="trash" slot="icon-only" class="deleteIcon"></ion-icon>
-                    </ion-button>
-                    <ion-button size="small" fill="outline" class="brushIcon" (click)="onEditPhoto()"
-                            color="caucaRed">
-                        <ion-icon name="brush" class="brushIcon" slot="icon-only"></ion-icon>
-                    </ion-button>
-                    <img class="selected-picture" [src]="getImageUrl(picture.dataUri)"
-                         *ngIf="hasImageUrl(picture.dataUri)" imageViewer/>
-                </ion-card>
-            </ion-slide>
-        </ion-slides>
-    </ion-item>
-</ion-list>
+    <div class="pictures-header">
+            <ion-item-divider color="secondary">
+                Photo(s)
+                <ion-button slot="end" (click)="selectPicture()" color="primary">
+                    <ion-icon class="footer-button-camera" name="albums" slot="start"></ion-icon>
+                    {{'choose' | translate}}
+                </ion-button>
+                <ion-button slot="end" (click)="takeNewPicture()" *ngIf="isUsingCordova" color="primary">
+                    <ion-icon class="footer-button-camera" name="camera" slot="start"></ion-icon>
+                    {{'new' | translate}}
+                </ion-button>
+            </ion-item-divider>
+    </div>
 
-<input type="file" id="fileElem" #filePicker accept="image/*" style="display:none" (change)="onFileSelected($event);"/>
+
+    <ion-slides pager="true" class="pictures-slide" *ngIf="showSlides">
+        <ion-slide *ngFor="let picture of repo.pictures;">
+            <div class="buttons-container">
+            <ion-button size="small" fill="outline" (click)="onDeletePhotos(picture.id)" color="caucaRed" class="delete-button">
+                <ion-icon name="trash" slot="icon-only"></ion-icon>
+            </ion-button>
+            
+            <ion-button size="small" fill="outline" (click)="onEditPhoto()" color="caucaRed" class="edit-button">
+                <ion-icon name="brush" slot="icon-only"></ion-icon>
+            </ion-button>
+            </div>
+            <img class="aaselected-picture" [src]="getImageUrl(picture.dataUri)"
+                *ngIf="hasImageUrl(picture.dataUri)" />
+        </ion-slide>
+    </ion-slides>
+
+
+<input type="file" id="fileElem" #filePicker accept="image/*" style="display:none" (change)="onFileSelected($event);" />
+
 
