feat(#295) fix errors & linting issues

--- a/Ionic4/src/app/inspection/inspection-implantation-plan/inspection-implantation-plan.component.html
+++ b/Ionic4/src/app/inspection/inspection-implantation-plan/inspection-implantation-plan.component.html
@@ -8,7 +8,7 @@
   
   <ion-content>
 
-      <app-pictures [repo]="picRepo" [multiPictures]="false" height="100%" style="background-color: lawngreen;" [saveAuto]="false" [(ngModel)]="IdBuilding">
+      <app-pictures [repo]="picRepo" [multiPictures]="false" height="100%" style="background-color: lawngreen;" [saveAuto]="false" [ngModel]="IdBuilding">
         {{'loading' | translate}}
       </app-pictures>
 
