--- a/Ionic4/src/app/inspection-list/inspections/inspections.component.html
+++ b/Ionic4/src/app/inspection-list/inspections/inspections.component.html
@@ -1,6 +1,6 @@
 <ion-split-pane when="md" contentId="inspection-list-content">
 
-  <ion-menu contentId="inspection-list-content" menuId="inspection-list-menu" id="inspectionListMenu" type="push">
+  <ion-menu contentId="inspection-list-content" menuId="inspection-list-menu" id="inspectionListMenu">
     <ion-header color="primary">
       <menu-profile></menu-profile>
     </ion-header>
