--- a/Ionic4/src/app/inspection/inspection-home/inspection-home.component.html
+++ b/Ionic4/src/app/inspection/inspection-home/inspection-home.component.html
@@ -19,7 +19,7 @@
 
     <ion-footer>
       <ion-toolbar color="primary" class="user-profile">
-        <ion-button size="small" expand="full" color="light" menuClose routerLink="/inspections-list">
+        <ion-button size="small" expand="full" color="light" routerLink="/inspections-list" routerDirection="root" replaceUrl="true">
           <ion-icon name="close-circle" slot="start"></ion-icon>
           {{'inspectionQuit' | translate}}
         </ion-button>
