--- a/Ionic4/src/app/inspection-building/inspection-building-details/inspection-building-details.component.html
+++ b/Ionic4/src/app/inspection-building/inspection-building-details/inspection-building-details.component.html
@@ -42,12 +42,14 @@
           <ion-row>
             <ion-col width-50>
               <ion-item>
-                <ion-input placeholder="{{'height' | translate}}" type="number" [pattern]="decimalPattern" item-start formControlName="height"></ion-input>
+                <ion-label position="floating" color="tertiary">{{'height' | translate}}</ion-label>
+                <ion-input type="number" [pattern]="decimalPattern" item-start formControlName="height"></ion-input>
               </ion-item>
             </ion-col>
             <ion-col width-50>
               <ion-item>
-                <ion-select class="unit-select" item-end formControlName="idUnitOfMeasureHeight" *ngIf="dimensionUnitOfMeasure" placeholder="{{'unit' | translate}}" okText="Ok" cancelText="{{'cancel' | translate}}">
+                  <ion-label position="floating" color="tertiary">{{'unit' | translate}}</ion-label>
+                <ion-select class="unit-select" formControlName="idUnitOfMeasureHeight" *ngIf="dimensionUnitOfMeasure" okText="Ok" cancelText="{{'cancel' | translate}}">
                   <ion-select-option *ngFor="let t of dimensionUnitOfMeasure | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
                 </ion-select>
               </ion-item>
@@ -64,12 +66,14 @@
         <ion-row>
           <ion-col width-50>
             <ion-item>
-              <ion-input type="tel" placeholder="DIE" [pattern]="integerPattern" item-start formControlName="estimatedWaterFlow"></ion-input>
+                <ion-label position="floating" color="tertiary">DIE</ion-label>
+              <ion-input type="tel" [pattern]="integerPattern" item-start formControlName="estimatedWaterFlow"></ion-input>
             </ion-item>
           </ion-col>
           <ion-col width-50>
             <ion-item>
-              <ion-select class="unit-select" item-end placeholder="{{'unit' | translate}}" formControlName="idUnitOfMeasureEstimatedWaterFlow" *ngIf="ratesUnitOfMeasure" okText="Ok" cancelText="{{'cancel' | translate}}">
+                <ion-label position="floating" color="tertiary">{{'unit' | translate}}</ion-label>
+              <ion-select class="unit-select" item-end formControlName="idUnitOfMeasureEstimatedWaterFlow" *ngIf="ratesUnitOfMeasure" okText="Ok" cancelText="{{'cancel' | translate}}">
                 <ion-select-option *ngFor="let t of ratesUnitOfMeasure | orderBy:'name'" [value]="t.id">{{t.name}}</ion-select-option>
               </ion-select>
             </ion-item>
